@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -10,7 +10,6 @@
 
 package com.sun.tools.xjc.addon;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.tools.xjc.Options;
@@ -40,7 +39,7 @@ public class DebugPlugin extends Plugin {
 
     @Override
     public List<String> getCustomizationURIs() {
-        return Arrays.asList("http://jaxb.dev.java.net/test");
+        return List.of("http://jaxb.dev.java.net/test");
     }
 
     @Override
